snapshots/syntax/library/functions/financial/ppmt/ppmt_array_assignment.snap
---
source: src/syntax/library/functions/financial/ppmt.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: principalPayments
        - kind: LeftParenthesis
          text: (
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "360"
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: DoubleKeyword
          text: Double
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: CallExpression
          children:
            - kind: Identifier
              text: principalPayments
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: i
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: PPmt
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: rate
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: i
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: numPayments
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: principal
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
